--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,3 @@
-/*
- * Title: Project style sheet
- * Description: This is the main project style sheet of this project
- * Author: Sumit Saha ( Learn with Sumit )
- * Date: 23/05/2021
- *
- */
-
 /* css custom properties */
 :root {
   --primary: #171c2a;
@@ -173,11 +165,16 @@ input[type="submit"]:active {
   width: auto;
 }
 
+.menu-item:hover{
+  transform: scale(1.05);
+}
+
 .menu-item {
   font-size: 14px;
   justify-self: end;
   padding: 0 10px;
   color: var(--primary);
+  transition: transform 0.1s ease-in-out;
 }
 
 .menu-item:not(:last-child) {
