--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,13 +11,24 @@
     <link rel="stylesheet" href="./stylesheets/toastify.css" />
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <script src="./js/toastify.js"></script>
+    <script src="../../public/js/moment.js"></script>
   </head>
   <body>
     <div class="menu">
       <% if (loggedIn && loggedIn.username) { %>
       <div class="menu-item"><a href="/inbox">Inbox</a></div>
       <div class="menu-item"><a href="/users">Users</a></div>
-      <div class="menu-item"><a href="#" onclick="logout()">Logout</a></div>
+      <div class="menu-item">
+        <% if (loggedIn && loggedIn.avatar) { %>
+        <img
+          src="./uploads/avatars/<%= loggedIn.avatar %>"
+          alt="<%= loggedIn.name %>"
+        />
+        <% } else { %>
+        <img src="./images/nophoto.png" alt="<%= loggedIn.name %>" />
+        <% } %>
+        <a href="#" onclick="logout()">Logout</a>
+      </div>
       <% } else { %>
       <div class="menu-item"><a href="/inbox">Inbox</a></div>
       <div class="menu-item"><a href="/users">Users</a></div>
@@ -30,6 +41,7 @@
         text: "You are being logged out...",
         duration: 1000,
       });
+
       function logout() {
         fetch("/", {
           method: "DELETE",
